# SntSwetlanaSchoolServer

./: .env  .gitignore  1.txt  Cargo.toml  README.md  list of idioms intermediate 2.txt  list of idioms intermediate 2.txt.bak
migrations/2025-12-05-080310-0000_create_users/: up.sql
migrations/2025-12-05-123739-0000_create_users/: up.sql
migrations/2025-12-13-153004-0000_seed_users/: down.sql  up.sql
migrations/2025-12-14-052454-0000_rbac/: down.sql  up.sql
migrations/2025-12-14-052550-0000_content_audit/: down.sql  up.sql
migrations/2025-12-14-052620-0000_seed_rbac/: up.sql
migrations/2026-01-08-193143-0000_rebuild_users_for_local_auth/: down.sql  up.sql
migrations/2026-01-08-195418-0000_seed_users_pass/: down.sql  up.sql
migrations/2026-01-09-052917-0000_seed_user_roles/: down.sql  up.sql
migrations/2026-01-09-081403-0000_fix_number_roles/: down.sql  up.sql
migrations/2026-01-13-115204-0000_add_session/: up.sql
migrations/2026-01-17-070905-0000_create_subject/: up.sql
migrations/2026-01-17-071427-0000_create_subject_content_items/: down.sql  up.sql
migrations/2026-01-17-071600-0000_extend_content_items_for_assignments/: down.sql  (+1 more)
seeds/: idioms_all_unique_insert.sql  idioms_clean_for_news_posts.csv  idioms_exmport1.csv  idioms_import.csv  idioms_import.sql  library_seed.sql  news_posts_idioms_insert.sql  news_seed.sql  users_uuid.sql
src/: 1.txt  api_docs.rs  db.rs  main.rs  models.rs  routes.rs  schema.rs  social_jobs.rs  users.rs
templates/: admin_layout.html  admin_login.html  admin_users.html  editor_index.html  teacher_index.html
(+83 files in other folders)
