[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"

dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full", "rt-multi-thread"] }

diesel = { version = "2.3.4", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.3.1"

tower = "0.5.2"
tower-http = "0.6.7"
