[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = "0.8.7"

dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full", "rt-multi-thread"] }

diesel = { version = "2.3.4", features = ["postgres", "r2d2","uuid", "chrono", "serde_json"] }
diesel_json = "0.3.0"

diesel_migrations = "2.3.1"

tower = "0.5.2"
tower-cookies = "0.11"
tower-http = "0.6.7"

oauth2 = "5"
reqwest = { version = "0.12", features = ["json"] }
url = "2"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
chrono = { version = "0.4.42", features = ["serde"] }

